Backend functionality completed and refactoring made (before switching away from stack layout)

--- a/CPC/index.html
+++ b/CPC/index.html
@@ -5,12 +5,24 @@
     <title>CPC</title>
     <style>
     </style>
-    <script type="text/javascript" src="./libs/d3.js"></script>
+    <script type="text/javascript" src="libraries/external/lodash.js"></script>
+
+    <!--D3 =====================================================================-->
+    <script type="text/javascript" src="libraries/external/d3/d3.js"></script>
+    <script type="text/javascript" src="libraries/external/d3/d3-array.js"></script>
+
+    <!--SEMANTIC UI ============================================================-->
+    <link rel="stylesheet" type="text/css" href="libraries/external/semantic/dist/semantic.min.css">
+    <script src="libraries/external/jquery.min.js"></script>
+    <script src="libraries/external/semantic/dist/semantic.min.js"></script>
+
+    <!--========================================================================-->
+
+
 
     <!-- Qunit JS and CSS sheet -->
-<!--    <link rel="stylesheet" href="./libs/qunit/qunit.css">-->
-<!--    <script defer src="./libs/qunit/qunit.js"></script>-->
-
+    <!--    <link rel="stylesheet" href="./libs/qunit/qunit.css">-->
+    <!--    <script defer src="./libs/qunit/qunit.js"></script>-->
 
 </head>
 <body>
@@ -19,53 +31,14 @@
 <!--    <div id="qunit-fixture"></div>-->
 <!--    <script defer src="../test/run-all-tepaiv-tests.js" type="module"></script>-->
 
+<script src="libraries/frequencies-array.js"></script>
+<script src="libraries/common/console-tools.js"></script>
+<script src="libraries/MiniTreeMap.js"></script>
+<script src="libraries/Dataset.js"></script>
 
-    <script type="module">
+<!--Load main JS-->
+<script src="app.js" type="text/javascript"></script>
 
-        import DictionariesArray from "../common/DictionariesArray.js"
-        import MiniTreeMap from "./MiniTreeMap.js"
-        import clog from "../common/consoleTools.js"
-
-
-        // import {should} from "./node_modules/chai/chai.js"
-
-        let frontData = [
-             { firstClass: 10, secondClass: 8,  thirdClass: 25 }
-            ,{ firstClass: 4,  secondClass: 12, thirdClass: 28 }
-            ,{ firstClass: 2,  secondClass: 19, thirdClass: 32 }
-            ,{ firstClass: 7,  secondClass: 23, thirdClass: 35 }
-            ,{ firstClass: 23, secondClass: 17, thirdClass: 43 }
-        ]
-
-        frontData = new DictionariesArray(frontData)
-        clog(frontData)
-
-
-        let baseData = [
-             { firstClass: 110, secondClass: 8,  thirdClass: 25 }
-            ,{ firstClass: 6,  secondClass: 122, thirdClass: 28 }
-            ,{ firstClass: 50,  secondClass: 60, thirdClass: 20 }
-            ,{ firstClass: 50,  secondClass: 60, thirdClass: 70 }
-            ,{ firstClass: 30, secondClass: 40, thirdClass: 50 }
-        ]
-
-        baseData = new DictionariesArray(baseData)
-        clog(baseData)
-
-        let miniTreeMap1 = new MiniTreeMap()
-        miniTreeMap1.setData(frontData, baseData)
-        miniTreeMap1.draw([150, 400])
-
-        let miniTreeMap2 = new MiniTreeMap()
-        miniTreeMap2.setData(frontData, baseData)
-        miniTreeMap2.draw([150, 400])
-
-        let miniTreeMap3 = new MiniTreeMap()
-        miniTreeMap3.setData(frontData, baseData)
-        miniTreeMap3.draw([150, 400])
-
-
-    </script>
 
 </body>
 </html>
