--- a/CPC/index.html
+++ b/CPC/index.html
@@ -3,42 +3,22 @@
 <head>
     <meta charset="UTF-8">
     <title>CPC</title>
-    <style>
-    </style>
-    <script type="text/javascript" src="libraries/external/lodash.js"></script>
-
-    <!--D3 =====================================================================-->
-    <script type="text/javascript" src="libraries/external/d3/d3.js"></script>
-    <script type="text/javascript" src="libraries/external/d3/d3-array.js"></script>
-
-    <!--SEMANTIC UI ============================================================-->
-    <link rel="stylesheet" type="text/css" href="libraries/external/semantic/dist/semantic.min.css">
-    <script src="libraries/external/jquery.min.js"></script>
-    <script src="libraries/external/semantic/dist/semantic.min.js"></script>
-
-    <!--========================================================================-->
 
 
 
-    <!-- Qunit JS and CSS sheet -->
-    <!--    <link rel="stylesheet" href="./libs/qunit/qunit.css">-->
-    <!--    <script defer src="./libs/qunit/qunit.js"></script>-->
+    <script type="text/javascript" src="./libraries/external/d3/d3.js"></script>
+    <script type="text/javascript" src="./libraries/external/d3/d3-array.js"></script>
+    <script type="text/javascript" src="./libraries/Cpc.js" ></script>
+
+
+
 
 </head>
+
 <body>
-<!--    &lt;!&ndash; Place QUnit frame and run tests &ndash;&gt;-->
-<!--    <div id="qunit"></div>-->
-<!--    <div id="qunit-fixture"></div>-->
-<!--    <script defer src="../test/run-all-tepaiv-tests.js" type="module"></script>-->
 
-<script src="libraries/frequencies-array.js"></script>
-<script src="libraries/common/console-tools.js"></script>
-<script src="libraries/MiniTreeMap.js"></script>
-<script src="libraries/Dataset.js"></script>
-
-<!--Load main JS-->
-<script src="app.js" type="text/javascript"></script>
-
+    <script type="text/javascript" src="./data/titanic.js"></script>
+    <script type="text/javascript" src="app.js"></script>
 
 </body>
 </html>
