Rectangle, Text, and Chart interfaces updated.
Module created with a 'Stack' class for housing data for stacks.

A quick, static version of horizontal CPC is created for demo purposes.

--- a/CPC/index.html
+++ b/CPC/index.html
@@ -31,6 +31,7 @@
 
     <script type="text/javascript" src="libraries/cpc/str.js"></script>
     <script type="text/javascript" src="libraries/cpc/survey-data.js"></script>
+    <script type="text/javascript" src="./libraries/cpc/data.js" ></script>
     <script type="text/javascript" src="./libraries/cpc/navigator.js" ></script>
     <script type="text/javascript" src="./libraries/cpc/controls.js" ></script>
 
