Basic objects (svg, rectangle, container, text) moved to their own module. New folder for demos created and the demo removed from app.js.

--- a/CPC/index.html
+++ b/CPC/index.html
@@ -32,6 +32,7 @@
     <script type="text/javascript" src="libraries/cpc/str.js"></script>
     <script type="text/javascript" src="libraries/cpc/survey-data.js"></script>
     <script type="text/javascript" src="./libraries/cpc/data.js" ></script>
+    <script type="text/javascript" src="./libraries/cpc/svg.js" ></script>
     <script type="text/javascript" src="./libraries/cpc/navigator.js" ></script>
     <script type="text/javascript" src="./libraries/cpc/controls.js" ></script>
 
@@ -83,10 +84,12 @@
 
 
 
+    <!--======================== DEMOS ========================-->
+    <script type="text/javascript" src="./demos/horizontal-cpc-static.js"></script>
+
 
     <!--======================== APP LOGIC ========================-->
-
-    <script type="text/javascript" src="./app.js"></script>
+<!--    <script type="text/javascript" src="./app.js"></script>-->
 
 
 
