Basic objects (svg, rectangle, container, text) moved to their own module. New folder for demos created and the demo removed from app.js.

--- a/CPC/index.html
+++ b/CPC/index.html
@@ -85,7 +85,7 @@
 
 
     <!--======================== DEMOS ========================-->
-    <script type="text/javascript" src="./demos/horizontal-cpc-static.js"></script>
+    <script type="text/javascript" src="demos/cpc-horizontal-static/demo.js"></script>
 
 
     <!--======================== APP LOGIC ========================-->
