'svg' module renamed as 'shape'; svg and group classes moved to container module; tests updated to adhere to the new module structure

--- a/CPC/index.html
+++ b/CPC/index.html
@@ -32,13 +32,10 @@
     <script type="text/javascript" src="libraries/cpc/str.js"></script>
     <script type="text/javascript" src="libraries/cpc/survey-data.js"></script>
     <script type="text/javascript" src="./libraries/cpc/data.js" ></script>
-    <script type="text/javascript" src="./libraries/cpc/svg.js" ></script>
+    <script type="text/javascript" src="libraries/cpc/container.js"></script>
+    <script type="text/javascript" src="./libraries/cpc/shape.js" ></script>
     <script type="text/javascript" src="./libraries/cpc/navigator.js" ></script>
     <script type="text/javascript" src="./libraries/cpc/controls.js" ></script>
-
-
-
-
 
 
 
@@ -84,12 +81,12 @@
 
 
 
-    <!--======================== DEMOS ========================-->
-    <script type="text/javascript" src="demos/cpc-horizontal-static/demo.js"></script>
+    <!--======================== LATEST DEMO ========================-->
+<!--    <script type="text/javascript" src="demos/cpc-horizontal-static/demo.js"></script>-->
 
 
     <!--======================== APP LOGIC ========================-->
-<!--    <script type="text/javascript" src="./app.js"></script>-->
+    <script type="text/javascript" src="./app.js"></script>
 
 
 
