Chart instances now update on DOM when fed new data. select() and remove() methods added to all classes. DOM testing incorporated to tests (coverage of DOM tests is still partial). Rectangle and Text now have the superclass Shape.

--- a/CPC/index.html
+++ b/CPC/index.html
@@ -7,8 +7,12 @@
 
     <!--======================== EXTERNAL MODULES ========================-->
 
+    <!--    D3     -->
     <script type="text/javascript" src="./libraries/external/d3/d3.js"></script>
     <script type="text/javascript" src="./libraries/external/d3/d3-array.js"></script>
+
+    <!--    Lodash     -->
+    <script type="text/javascript" src="./libraries/external/lodash.js"></script>
 
     <!--    Semantic UI     -->
     <link rel="stylesheet" type="text/css" href="libraries/external/semantic/dist/semantic.min.css">
