Panels can now embed themselves in other panels (initial implementation; changes in parent panels not yet propagating upwards in panel hierarchy recursively).

--- a/CPC/index.html
+++ b/CPC/index.html
@@ -33,6 +33,7 @@
     <!--========================-- INTERNAL MODULES ========================-->
     <script type="text/javascript" src="./data/datasets.js"></script>
 
+    <script type="text/javascript" src="libraries/utils/classUtils.js"></script>
     <script type="text/javascript" src="libraries/cpc/str.js"></script>
     <script type="text/javascript" src="libraries/cpc/survey-data.js"></script>
     <script type="text/javascript" src="./libraries/cpc/data.js" ></script>
