Csv importing and dataset querying functionalities re-implemented from older version of CPC

--- a/CPC/index.html
+++ b/CPC/index.html
@@ -37,6 +37,7 @@
     <script type="text/javascript" src="libraries/cpc/str.js"></script>
     <script type="text/javascript" src="libraries/cpc/survey-data.js"></script>
     <script type="text/javascript" src="./libraries/cpc/data.js" ></script>
+    <script type="text/javascript" src="./libraries/cpc/dataset.js" ></script>
     <script type="text/javascript" src="libraries/cpc/container.js"></script>
     <script type="text/javascript" src="./libraries/cpc/shape.js" ></script>
     <script type="text/javascript" src="./libraries/cpc/navigator.js" ></script>
