Updates to Panel data now reflects to DOM (after calling Panel.update()).

--- a/CPC/index.html
+++ b/CPC/index.html
@@ -34,6 +34,7 @@
     <script type="text/javascript" src="./data/datasets.js"></script>
 
     <script type="text/javascript" src="libraries/utils/classUtils.js"></script>
+    <script type="text/javascript" src="../Utilities/arrayUtils.js"></script>
     <script type="text/javascript" src="libraries/cpc/str.js"></script>
     <script type="text/javascript" src="libraries/cpc/survey-data.js"></script>
     <script type="text/javascript" src="./libraries/cpc/data.js" ></script>
