`str` module moved to `utils` library and renamed as ``stringUtils

--- a/CPC/index.html
+++ b/CPC/index.html
@@ -35,7 +35,7 @@
 
     <script type="text/javascript" src="libraries/utils/arrayUtils.js"></script>
     <script type="text/javascript" src="libraries/utils/classUtils.js"></script>
-    <script type="text/javascript" src="libraries/cpc/str.js"></script>
+    <script type="text/javascript" src="libraries/utils/stringUtils.js"></script>
     <script type="text/javascript" src="libraries/cpc/survey-data.js"></script>
     <script type="text/javascript" src="./libraries/cpc/data.js" ></script>
     <script type="text/javascript" src="./libraries/cpc/dataset.js" ></script>
