Bulk update for CPC.

--- a/CPC/index.html
+++ b/CPC/index.html
@@ -15,14 +15,14 @@
     <script type="text/javascript" src="./libraries/external/lodash.js"></script>
 
     <!--    Semantic UI     -->
-    <link rel="stylesheet" type="text/css" href="libraries/external/semantic/dist/semantic.min.css">
+<!--    <link rel="stylesheet" type="text/css" href="libraries/external/semantic/dist/semantic.min.css">-->
     <script src="libraries/external/jquery-3.1.1.min.js"></script>
-    <script src="libraries/external/semantic/dist/semantic.min.js"></script>
+<!--    <script src="libraries/external/semantic/dist/semantic.min.js"></script>-->
 
 
     <!--     VUE     -->
     <!-- Vue development version, includes helpful console warnings -->
-<!--    <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>-->
+    <!--    <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>-->
 
     <!-- Vue production version, optimized for size and speed -->
     <!--<script src="https://cdn.jsdelivr.net/npm/vue"></script>-->
@@ -36,6 +36,7 @@
     <script type="text/javascript" src="libraries/utils/arrayUtils.js"></script>
     <script type="text/javascript" src="libraries/utils/classUtils.js"></script>
     <script type="text/javascript" src="libraries/utils/stringUtils.js"></script>
+    <script type="text/javascript" src="libraries/utils/mapUtils.js"></script>
     <script type="text/javascript" src="libraries/cpc/survey-data.js"></script>
     <script type="text/javascript" src="./libraries/cpc/data.js" ></script>
     <script type="text/javascript" src="./libraries/cpc/dataset.js" ></script>
