Bulk update after color sets are implemented. (Chart labels are still being implemented).

--- a/CPC/index.html
+++ b/CPC/index.html
@@ -35,6 +35,9 @@
 
     <script type="text/javascript" src="libraries/utils/arrayUtils.js"></script>
     <script type="text/javascript" src="libraries/utils/classUtils.js"></script>
+    <script type="text/javascript" src="libraries/utils/errorUtils.js"></script>
+    <script type="text/javascript" src="libraries/utils/domUtils.js"></script>
+    <script type="text/javascript" src="libraries/utils/jsUtils.js"></script>
     <script type="text/javascript" src="libraries/utils/stringUtils.js"></script>
     <script type="text/javascript" src="libraries/utils/mapUtils.js"></script>
     <script type="text/javascript" src="libraries/cpc/survey-data.js"></script>
