--- a/CPC/index.html
+++ b/CPC/index.html
@@ -90,33 +90,51 @@
 
 <!--    </script>-->
 
-    <!-- Checkbox -->
-    <input type="checkbox" id="myCheck" onclick="myFunction()">Show absolute values
+    <!-- Navigator 1 Checkbox -->
+    <input type="checkbox" id="checkbox1" onclick="checkbox1()"
+           style="margin-left:40px">
+<!--    <text style="color:lightgray; margin-left:845px">Absolute values</text>-->
 
-    <p id="text" style="display:none">Checkbox is CHECKED!</p>
+    <!-- Navigator 2 Checkbox -->
+    <input type="checkbox" id="checkbox2" onclick="checkbox2()"
+           style="margin-left:550px">
+<!--    <text style="color:lightgray; margin-left:2425px">Absolute values</text>-->
+
 
 
     <script>
 
-        function myFunction() {
+        function checkbox1() {
 
             // Get the checkbox
-            var checkBox = document.getElementById("myCheck");
-            // Get the output text
-            var text = document.getElementById("text");
+            var checkBox1 = document.getElementById("checkbox1")
 
             // If the checkbox is checked, toggle labels
-            if (checkBox.checked == true){
+            if (checkBox1.checked === true ){
                 navigator1.showAbsoluteValues(true)
-                navigator2.showAbsoluteValues(true)
             } else {
                 navigator1.showAbsoluteValues(false)
-                navigator2.showAbsoluteValues(false)
             }
 
             navigator1.update()
+        }
+
+
+        function checkbox2() {
+
+            // Get the checkbox
+            var checkBox2 = document.getElementById("checkbox2")
+
+            // If the checkbox is checked, toggle labels
+            if (checkBox2.checked === true ){
+                navigator2.showAbsoluteValues(true)
+            } else {
+                navigator2.showAbsoluteValues(false)
+            }
+
             navigator2.update()
         }
+
 
     </script>
 
