--- a/CPC/index.html
+++ b/CPC/index.html
@@ -95,6 +95,48 @@
            style="margin-left:40px">
 <!--    <text style="color:lightgray; margin-left:845px">Absolute values</text>-->
 
+
+    <!-- Navigator 1 Color scheme Dropdown -->
+    <select
+            id="navigator-1-color-scheme-dropdown"
+            onchange="setColorScheme()"
+            style="margin-left:40px">
+
+            <option value=Single-Hue>Single-Hue</option>
+            <option value=Multi-Hue>Multi-Hue</option>
+            <option value='Blues'>Blues</option>
+            <option value='Greens'>Greens</option>
+            <option value='Greys'>Greys</option>
+            <option value='Oranges'>Oranges</option>
+            <option value='Purples'>Purples</option>
+            <option value='Reds'>Reds</option>
+            <option value='BuGn'>BuGn</option>
+            <option value='BuPu'>BuPu</option>
+            <option value='GnBu'>GnBu</option>
+            <option value='OrRd'>OrRd</option>
+            <option value='PuBuGn'>PuBuGn</option>
+            <option value='PuBu'>PuBu</option>
+            <option value='PuRd'>PuRd</option>
+            <option value='RdPu'>RdPu</option>
+            <option value='YlGnBu'>YlGnBu</option>
+            <option value='YlGn'>YlGn</option>
+            <option value='YlOrBr'>YlOrBr</option>
+            <option value='YlOrRd'>YlOrRd</option>
+            <option value='Viridis'>Viridis</option>
+            <option value='Inferno'>Inferno</option>
+            <option value='Magma'>Magma</option>
+            <option value='Warm'>Warm</option>
+            <option value='Cool'>Cool</option>
+            <option value='CubehelixDefault'>CubehelixDefault</option>
+            <option value='Plasma'>Plasma</option>
+
+    </select>
+
+
+    <!--    <text style="color:lightgray; margin-left:2425px">Absolute values</text>-->
+
+
+
     <!-- Navigator 2 Checkbox -->
     <input type="checkbox" id="checkbox2" onclick="checkbox2()"
            style="margin-left:550px">
@@ -103,6 +145,18 @@
 
 
     <script>
+
+        function setColorScheme() {
+
+            // Get the checkbox
+            const dropdown = document.getElementById("navigator-1-color-scheme-dropdown")
+            const selectedValue = dropdown.value
+            // const selectedValue = dropdown.options[dropdown.selectedIndex]
+
+            navigator1.colorSet(selectedValue)
+            navigator1.update()
+        }
+
 
         function checkbox1() {
 
