Titanic and Titanic-2 color sets added.

--- a/CPC/index.html
+++ b/CPC/index.html
@@ -102,8 +102,12 @@
             onchange="setColorScheme()"
             style="margin-left:40px">
 
+
+
             <option value=Single-Hue>Single-Hue</option>
             <option value=Multi-Hue>Multi-Hue</option>
+            <option value=Titanic>Titanic</option>
+            <option value=Titanic-2>Titanic-2</option>
             <option value='Blues'>Blues</option>
             <option value='Greens'>Greens</option>
             <option value='Greys'>Greys</option>
