Comparison view is now stable after fixing naming issue for replacement panels

--- a/CPC/libraries/cpc/tests/navigator/visualTests/panel_vTests.html
+++ b/CPC/libraries/cpc/tests/navigator/visualTests/panel_vTests.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Panel</title>
+    <title>Panel vTests</title>
 
 
     <!--======================== EXTERNAL MODULES ========================-->
@@ -40,9 +40,9 @@
     <script type="text/javascript" src="../../../../utils/stringUtils.js"></script>
     <script type="text/javascript" src="../../../../utils/mapUtils.js"></script>
     <script type="text/javascript" src="../../../../cpc/survey-data.js"></script>
+    <script type="text/javascript" src="../../../../cpc/container.js"></script>
     <script type="text/javascript" src="./../../../../cpc/data.js" ></script>
     <script type="text/javascript" src="./../../../../cpc/dataset.js" ></script>
-    <script type="text/javascript" src="../../../../cpc/container.js"></script>
     <script type="text/javascript" src="./../../../../cpc/shape.js" ></script>
     <script type="text/javascript" src="./../../../../cpc/navigator.js" ></script>
     <script type="text/javascript" src="./../../../../cpc/controls.js" ></script>
