--- a/CPC/index.html
+++ b/CPC/index.html
@@ -15,9 +15,9 @@
     <script type="text/javascript" src="./libraries/external/lodash.js"></script>
 
     <!--    Semantic UI     -->
-<!--    <link rel="stylesheet" type="text/css" href="libraries/external/semantic/dist/semantic.min.css">-->
+    <link rel="stylesheet" type="text/css" href="libraries/external/semantic/dist/semantic.min.css">
     <script src="libraries/external/jquery-3.1.1.min.js"></script>
-<!--    <script src="libraries/external/semantic/dist/semantic.min.js"></script>-->
+    <script src="libraries/external/semantic/dist/semantic.min.js"></script>
 
 
     <!--     VUE     -->
@@ -28,9 +28,11 @@
     <!--<script src="https://cdn.jsdelivr.net/npm/vue"></script>-->
 
 
+    <!--======================== INTERNAL STYLE SHEET ======================-->
+    <link rel="stylesheet" type="text/css" href="app.css">
 
 
-    <!--========================-- INTERNAL MODULES ========================-->
+    <!--========================== INTERNAL MODULES ========================-->
     <script type="text/javascript" src="./data/datasets.js"></script>
 
     <script type="text/javascript" src="libraries/utils/arrayUtils.js"></script>
@@ -55,6 +57,57 @@
 <body>
 
 
+<div class="main-container">
+
+    <div class="preferences-area">
+
+            <!--Absolute Values Checkbox-->
+            <div class="preference-control ui checkbox">
+                <input type="checkbox" name="example" id="checkbox1" onclick="checkbox1()">
+                <label>Show absolute values</label>
+            </div>
+
+            <!--Color Scheme Dropdown-->
+            <select class="preference-control ui dropdown" id="navigator-1-color-scheme-dropdown" onchange="setColorScheme()">
+
+                <option value="">ColorScheme</option>
+                <option value=Single-Hue>Single-Hue</option>
+                <option value=Multi-Hue>Multi-Hue</option>
+                <option value=Titanic>Titanic</option>
+                <option value=Titanic-2>Titanic-2</option>
+                <option value='Blues'>Blues</option>
+                <option value='Greens'>Greens</option>
+                <option value='Greys'>Greys</option>
+                <option value='Oranges'>Oranges</option>
+                <option value='Purples'>Purples</option>
+                <option value='Reds'>Reds</option>
+                <option value='BuGn'>BuGn</option>
+                <option value='BuPu'>BuPu</option>
+                <option value='GnBu'>GnBu</option>
+                <option value='OrRd'>OrRd</option>
+                <option value='PuBuGn'>PuBuGn</option>
+                <option value='PuBu'>PuBu</option>
+                <option value='PuRd'>PuRd</option>
+                <option value='RdPu'>RdPu</option>
+                <option value='YlGnBu'>YlGnBu</option>
+                <option value='YlGn'>YlGn</option>
+                <option value='YlOrBr'>YlOrBr</option>
+                <option value='YlOrRd'>YlOrRd</option>
+                <option value='Viridis'>Viridis</option>
+                <option value='Inferno'>Inferno</option>
+                <option value='Magma'>Magma</option>
+                <option value='Warm'>Warm</option>
+                <option value='Cool'>Cool</option>
+                <option value='CubehelixDefault'>CubehelixDefault</option>
+                <option value='Plasma'>Plasma</option>
+            </select>
+
+
+    </div>
+
+    <div class="navigator-area"></div>
+
+</div>
 
     <!--======================== CONTROLS ========================-->
 
@@ -89,64 +142,6 @@
 <!--        let ignoredColumnsFromInput = omittedColumns.vueValue.split(',')-->
 
 <!--    </script>-->
-
-    <!-- Navigator 1 Checkbox -->
-    <input type="checkbox" id="checkbox1" onclick="checkbox1()"
-           style="margin-left:40px">
-<!--    <text style="color:lightgray; margin-left:845px">Absolute values</text>-->
-
-
-    <!-- Navigator 1 Color scheme Dropdown -->
-    <select
-            id="navigator-1-color-scheme-dropdown"
-            onchange="setColorScheme()"
-            style="margin-left:40px">
-
-
-
-            <option value=Single-Hue>Single-Hue</option>
-            <option value=Multi-Hue>Multi-Hue</option>
-            <option value=Titanic>Titanic</option>
-            <option value=Titanic-2>Titanic-2</option>
-            <option value='Blues'>Blues</option>
-            <option value='Greens'>Greens</option>
-            <option value='Greys'>Greys</option>
-            <option value='Oranges'>Oranges</option>
-            <option value='Purples'>Purples</option>
-            <option value='Reds'>Reds</option>
-            <option value='BuGn'>BuGn</option>
-            <option value='BuPu'>BuPu</option>
-            <option value='GnBu'>GnBu</option>
-            <option value='OrRd'>OrRd</option>
-            <option value='PuBuGn'>PuBuGn</option>
-            <option value='PuBu'>PuBu</option>
-            <option value='PuRd'>PuRd</option>
-            <option value='RdPu'>RdPu</option>
-            <option value='YlGnBu'>YlGnBu</option>
-            <option value='YlGn'>YlGn</option>
-            <option value='YlOrBr'>YlOrBr</option>
-            <option value='YlOrRd'>YlOrRd</option>
-            <option value='Viridis'>Viridis</option>
-            <option value='Inferno'>Inferno</option>
-            <option value='Magma'>Magma</option>
-            <option value='Warm'>Warm</option>
-            <option value='Cool'>Cool</option>
-            <option value='CubehelixDefault'>CubehelixDefault</option>
-            <option value='Plasma'>Plasma</option>
-
-    </select>
-
-
-    <!--    <text style="color:lightgray; margin-left:2425px">Absolute values</text>-->
-
-
-
-    <!-- Navigator 2 Checkbox -->
-    <input type="checkbox" id="checkbox2" onclick="checkbox2()"
-           style="margin-left:550px">
-<!--    <text style="color:lightgray; margin-left:2425px">Absolute values</text>-->
-
-
 
     <script>
 
@@ -203,6 +198,9 @@
     <!--======================== APP LOGIC ========================-->
     <script type="text/javascript" src="./app.js"></script>
 
+    <script>
+        slider = new controls.Slider('Test',10,0,100, navigator1.objects('panel-0-0'), navigator1.objects('panel-0-0').animationDuration)
+    </script>
 
 
 </body>
