--- a/CPC/index.html
+++ b/CPC/index.html
@@ -57,57 +57,6 @@
 <body>
 
 
-<div class="main-container">
-
-    <div class="preferences-area">
-
-            <!--Absolute Values Checkbox-->
-            <div class="preference-control ui checkbox">
-                <input type="checkbox" name="example" id="checkbox1" onclick="checkbox1()">
-                <label>Show absolute values</label>
-            </div>
-
-            <!--Color Scheme Dropdown-->
-            <select class="preference-control ui dropdown" id="navigator-1-color-scheme-dropdown" onchange="setColorScheme()">
-
-                <option value="">ColorScheme</option>
-                <option value=Single-Hue>Single-Hue</option>
-                <option value=Multi-Hue>Multi-Hue</option>
-                <option value=Titanic>Titanic</option>
-                <option value=Titanic-2>Titanic-2</option>
-                <option value='Blues'>Blues</option>
-                <option value='Greens'>Greens</option>
-                <option value='Greys'>Greys</option>
-                <option value='Oranges'>Oranges</option>
-                <option value='Purples'>Purples</option>
-                <option value='Reds'>Reds</option>
-                <option value='BuGn'>BuGn</option>
-                <option value='BuPu'>BuPu</option>
-                <option value='GnBu'>GnBu</option>
-                <option value='OrRd'>OrRd</option>
-                <option value='PuBuGn'>PuBuGn</option>
-                <option value='PuBu'>PuBu</option>
-                <option value='PuRd'>PuRd</option>
-                <option value='RdPu'>RdPu</option>
-                <option value='YlGnBu'>YlGnBu</option>
-                <option value='YlGn'>YlGn</option>
-                <option value='YlOrBr'>YlOrBr</option>
-                <option value='YlOrRd'>YlOrRd</option>
-                <option value='Viridis'>Viridis</option>
-                <option value='Inferno'>Inferno</option>
-                <option value='Magma'>Magma</option>
-                <option value='Warm'>Warm</option>
-                <option value='Cool'>Cool</option>
-                <option value='CubehelixDefault'>CubehelixDefault</option>
-                <option value='Plasma'>Plasma</option>
-            </select>
-
-
-    </div>
-
-    <div class="navigator-area"></div>
-
-</div>
 
     <!--======================== CONTROLS ========================-->
 
@@ -115,36 +64,129 @@
     <!--========== OMIT COLUMNS TEXTBOX ==========-->
 
     <!--    <br><br>-->
-<!--    <div id='omit-columns-input' class="ui left action input">-->
-<!--        <button class="ui white labeled icon button">-->
-<!--            <i class="x icon"></i>-->
-<!--            Omit Columns-->
-<!--        </button>-->
-<!--        <input v-model="vueValue" type="text" placeholder="Name,Gender..." value="">-->
+    <!--    <div id='omit-columns-input' class="ui left action input">-->
+    <!--        <button class="ui white labeled icon button">-->
+    <!--            <i class="x icon"></i>-->
+    <!--            Omit Columns-->
+    <!--        </button>-->
+    <!--        <input v-model="vueValue" type="text" placeholder="Name,Gender..." value="">-->
 
-<!--        <p>{{ vueValue.split(',') }}</p>-->
+    <!--        <p>{{ vueValue.split(',') }}</p>-->
 
-<!--    </div>-->
+    <!--    </div>-->
 
-<!--    <br><br>-->
+    <!--    <br><br>-->
 
 
-<!--    <script type="text/javascript">-->
+    <!--    <script type="text/javascript">-->
 
-<!--        let omittedColumns = new Vue({-->
+    <!--        let omittedColumns = new Vue({-->
 
-<!--            el: '#omit-columns-input',-->
-<!--            data: {-->
-<!--                vueValue: 'Name'-->
-<!--            }-->
-<!--        })-->
+    <!--            el: '#omit-columns-input',-->
+    <!--            data: {-->
+    <!--                vueValue: 'Name'-->
+    <!--            }-->
+    <!--        })-->
 
-<!--        let ignoredColumnsFromInput = omittedColumns.vueValue.split(',')-->
+    <!--        let ignoredColumnsFromInput = omittedColumns.vueValue.split(',')-->
 
-<!--    </script>-->
+    <!--    </script>-->
+
+
+    <div class="main-container">
+
+        <div class="preferences-area">
+
+                <!--Absolute Values Checkbox-->
+                <div class="preference-control ui checkbox">
+                    <input type="checkbox" name="example" id="checkbox1" onclick="toggleAbsoluteValues()">
+                    <label>Show absolute values</label>
+                </div>
+
+                <!--Color Scheme Dropdown-->
+            <div class="preference-control">
+<!--                <p>ColorScheme</p>-->
+                <select class="ui dropdown" id="navigator-1-color-scheme-dropdown" onchange="setColorScheme()">
+
+                    <option value="">ColorScheme</option>
+                    <option value=Single-Hue>Single-Hue</option>
+                    <option value=Multi-Hue>Multi-Hue</option>
+                    <option value=Titanic>Titanic</option>
+                    <option value=Titanic-2>Titanic-2</option>
+                    <option value='Blues'>Blues</option>
+                    <option value='Greens'>Greens</option>
+                    <option value='Greys'>Greys</option>
+                    <option value='Oranges'>Oranges</option>
+                    <option value='Purples'>Purples</option>
+                    <option value='Reds'>Reds</option>
+                    <option value='BuGn'>BuGn</option>
+                    <option value='BuPu'>BuPu</option>
+                    <option value='GnBu'>GnBu</option>
+                    <option value='OrRd'>OrRd</option>
+                    <option value='PuBuGn'>PuBuGn</option>
+                    <option value='PuBu'>PuBu</option>
+                    <option value='PuRd'>PuRd</option>
+                    <option value='RdPu'>RdPu</option>
+                    <option value='YlGnBu'>YlGnBu</option>
+                    <option value='YlGn'>YlGn</option>
+                    <option value='YlOrBr'>YlOrBr</option>
+                    <option value='YlOrRd'>YlOrRd</option>
+                    <option value='Viridis'>Viridis</option>
+                    <option value='Inferno'>Inferno</option>
+                    <option value='Magma'>Magma</option>
+                    <option value='Warm'>Warm</option>
+                    <option value='Cool'>Cool</option>
+                    <option value='CubehelixDefault'>CubehelixDefault</option>
+                    <option value='Plasma'>Plasma</option>
+                </select>
+            </div>
+
+
+
+            <!--Animation Duration Slider-->
+            <div class="preference-control">
+
+                <p>Animation duration: <span id="animation-duration-text">600</span></p>
+
+                <input type="range"
+                       class="slider"
+                       id=animation-duration-slider
+                       value=600
+                       max=2500
+                       min=100
+                       onchange="setAnimationDuration()"
+                >
+
+            </div>
+
+
+        </div>
+
+        <div class="navigator-area"></div>
+
+    </div>
+
+
+    <!--======================== LATEST DEMO ========================-->
+    <!--    <script type="text/javascript" src="demos/cpc-horizontal-static/demo.js"></script>-->
+
+    <!--======================== APP LOGIC ========================-->
+    <script type="text/javascript" src="./app.js"></script>
+
 
     <script>
 
+        const allNavigators = [
+            navigator1,
+            navigator2,
+            navigator3,
+            navigator4,
+            navigator5
+            // navigator6
+        ]
+
+
+        // SET COLOR SCHEME //
         function setColorScheme() {
 
             // Get the checkbox
@@ -152,24 +194,33 @@
             const selectedValue = dropdown.value
             // const selectedValue = dropdown.options[dropdown.selectedIndex]
 
-            navigator1.colorSet(selectedValue)
-            navigator1.update()
+            allNavigators.forEach( (navigator) => {
+                navigator
+                    .colorSet(selectedValue)
+                    .update()
+            })
+
         }
 
 
-        function checkbox1() {
+        // TOGGLE ABSOLUTE VALUES //
+        function toggleAbsoluteValues() {
 
-            // Get the checkbox
-            var checkBox1 = document.getElementById("checkbox1")
+            // Get the checkbox element
+            const checkBox1 = document.getElementById("checkbox1")
 
-            // If the checkbox is checked, toggle labels
-            if (checkBox1.checked === true ){
-                navigator1.showAbsoluteValues(true)
-            } else {
-                navigator1.showAbsoluteValues(false)
-            }
+            // Toggle labels based on checkbox status
+            allNavigators.forEach( (navigator) => {
 
-            navigator1.update()
+                if (checkBox1.checked === true ){
+                    navigator.showAbsoluteValues(true)
+                } else {
+                    navigator.showAbsoluteValues(false)
+                }
+
+                navigator.update()
+            })
+
         }
 
 
@@ -189,18 +240,30 @@
         }
 
 
+
+        // ANIMATION DURATION SLIDER //
+        function setAnimationDuration() {
+
+            // Get slider value and text
+            const animationDurationSlider = document.getElementById('animation-duration-slider')
+            const animationDurationText = document.getElementById('animation-duration-text')
+
+            // Update animation duration text
+            animationDurationText.innerText = Number(animationDurationSlider.value)
+
+            // Change animation duration
+            allNavigators.forEach( (navigator) => {
+
+                navigator.objects('panel-0-0')
+                    .animationDuration( Number(animationDurationSlider.value) )
+                    .update()
+            } )
+
+        }
+
+
     </script>
 
-    <!--======================== LATEST DEMO ========================-->
-<!--    <script type="text/javascript" src="demos/cpc-horizontal-static/demo.js"></script>-->
-
-
-    <!--======================== APP LOGIC ========================-->
-    <script type="text/javascript" src="./app.js"></script>
-
-    <script>
-        slider = new controls.Slider('Test',10,0,100, navigator1.objects('panel-0-0'), navigator1.objects('panel-0-0').animationDuration)
-    </script>
 
 
 </body>
