get() and animationDuration() methods added to Navigator

--- a/CPC/index.html
+++ b/CPC/index.html
@@ -254,7 +254,7 @@
             // Change animation duration
             allNavigators.forEach( (navigator) => {
 
-                navigator.objects('panel-0-0')
+                navigator
                     .animationDuration( Number(animationDurationSlider.value) )
                     .update()
             } )
