Minor formatting changes

--- a/CPC/index.html
+++ b/CPC/index.html
@@ -63,34 +63,34 @@
 
     <!--========== OMIT COLUMNS TEXTBOX ==========-->
 
-    <!--    <br><br>-->
-    <!--    <div id='omit-columns-input' class="ui left action input">-->
-    <!--        <button class="ui white labeled icon button">-->
-    <!--            <i class="x icon"></i>-->
-    <!--            Omit Columns-->
-    <!--        </button>-->
-    <!--        <input v-model="vueValue" type="text" placeholder="Name,Gender..." value="">-->
+    <!--        <br><br>-->
+    <!--        <div id='omit-columns-input' class="ui left action input">-->
+    <!--            <button class="ui white labeled icon button">-->
+    <!--                <i class="x icon"></i>-->
+    <!--                Omit Columns-->
+    <!--            </button>-->
+    <!--            <input v-model="vueValue" type="text" placeholder="Name,Gender..." value="">-->
 
-    <!--        <p>{{ vueValue.split(',') }}</p>-->
+    <!--        &lt;!&ndash;<p>{{ vueValue.split(',') }}</p>&ndash;&gt;-->
 
-    <!--    </div>-->
+    <!--        </div>-->
 
-    <!--    <br><br>-->
+    <!--        <br><br>-->
 
 
-    <!--    <script type="text/javascript">-->
+    <!--        <script type="text/javascript">-->
 
-    <!--        let omittedColumns = new Vue({-->
+    <!--            let omittedColumns = new Vue({-->
 
-    <!--            el: '#omit-columns-input',-->
-    <!--            data: {-->
-    <!--                vueValue: 'Name'-->
-    <!--            }-->
-    <!--        })-->
+    <!--                el: '#omit-columns-input',-->
+    <!--                data: {-->
+    <!--                    vueValue: 'Name'-->
+    <!--                }-->
+    <!--            })-->
 
-    <!--        let ignoredColumnsFromInput = omittedColumns.vueValue.split(',')-->
+    <!--            let ignoredColumnsFromInput = omittedColumns.vueValue.split(',')-->
 
-    <!--    </script>-->
+    <!--        </script>-->
 
 
     <div class="main-container">
