--- a/CPC/index.html
+++ b/CPC/index.html
@@ -42,6 +42,7 @@
     <script type="text/javascript" src="libraries/utils/jsUtils.js"></script>
     <script type="text/javascript" src="libraries/utils/stringUtils.js"></script>
     <script type="text/javascript" src="libraries/utils/mapUtils.js"></script>
+    <script type="text/javascript" src="libraries/utils/statsUtils.js"></script>
     <script type="text/javascript" src="libraries/cpc/survey-data.js"></script>
     <script type="text/javascript" src="./libraries/cpc/data.js" ></script>
     <script type="text/javascript" src="./libraries/cpc/dataset.js" ></script>
