--- a/CPC/libraries/cpc/tests/navigator/visualTests/misc_vTests.html
+++ b/CPC/libraries/cpc/tests/navigator/visualTests/misc_vTests.html
@@ -39,6 +39,7 @@
     <script type="text/javascript" src="../../../../utils/jsUtils.js"></script>
     <script type="text/javascript" src="../../../../utils/stringUtils.js"></script>
     <script type="text/javascript" src="../../../../utils/mapUtils.js"></script>
+    <script type="text/javascript" src="../../../../utils/statsUtils.js"></script>
     <script type="text/javascript" src="../../../../cpc/survey-data.js"></script>
     <script type="text/javascript" src="../../../../cpc/container.js"></script>
     <script type="text/javascript" src="./../../../../cpc/data.js" ></script>
