--- a/CPC/index.html
+++ b/CPC/index.html
@@ -174,6 +174,7 @@
                        class="slider"
                        id=stroke-width-slider
                        value=0.5
+                       step=0.5
                        max=6
                        min=0
                        onchange="setStrokeWidth()"
@@ -206,7 +207,7 @@
 
             </div>
 
-            <!-- Stroke Width Slider-->
+            <!-- Stroke Color Dropdown-->
             <div id="stroke-color-control" class="preference-control">
 
                     <!--<p>ColorScheme</p>-->
