--- a/CPC/libraries/cpc/tests/navigator/visualTests/panel_vTests.html
+++ b/CPC/libraries/cpc/tests/navigator/visualTests/panel_vTests.html
@@ -163,7 +163,7 @@
     function checkbox1() {
 
         // Get the checkbox
-        var checkBox1 = document.getElementById("checkbox1")
+        const checkBox1 = document.getElementById("checkbox1")
 
         // If the checkbox is checked, toggle labels
         if (checkBox1.checked === true ){
@@ -179,7 +179,7 @@
     function checkbox2() {
 
         // Get the checkbox
-        var checkBox2 = document.getElementById("checkbox2")
+        const checkBox2 = document.getElementById("checkbox2")
 
         // If the checkbox is checked, toggle labels
         if (checkBox2.checked === true ){
